endpoints sind grad bissi eine baustelle, pls lmk wenn was nicht geht